[tool.poetry]
name = "jira-echo-bot"
version = "0.1.0"
description = "Slack bot to echo back more detail on Jira issues it sees"
authors = ["Stephen Carey"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
slack-bolt = "^1.2.3"
jira = "^2.0.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.4"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
